--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <h2 class="about-title"><span>Web</span>Developers<span>Be</span></h2>
       <p class="description-about">Frontend developers.</p>
       <p class="description-about"> Beste statische/geanimeerde websites voor lage prijzen!</p>
-      <img class="logos-abt" src="/assets/logos-abt.png">
+      <img class="logos-abt" src="assets/logos-abt.png">
     </div>
   </div>
   <div id="Portfolio">
@@ -124,13 +124,13 @@
     <div class="contact-container">
       <div class="contact-grid">
           <a href="https://www.facebook.com/profile.php?id=61560316055868" target="_blank" class="facebook-icon">
-              <img src="/assets/facebook-icon.png" alt="First Icon">
+              <img src="assets/facebook-icon.png" alt="First Icon">
           </a>
           <a href="mailto:webdevelopersbe@gmail.com" class="e-mail-icon">
-              <img src="/assets/e-mail-icon.png" alt="Second Icon">
+              <img src="assets/e-mail-icon.png" alt="Second Icon">
           </a>
           <p class="contact-text"><a class="contact-text" href="mailto:webhostersbe@gmail.com">webdevelopersbe@gmail.com</a></p>
-          <img class="copyright-symbol" src="/assets/copyright-symbol.png">
+          <img class="copyright-symbol" src="assets/copyright-symbol.png">
           <p class="copyright-text"> 2024 WebDevelopersBe. All rights reserved.</p>
       </div>
   </div>
