--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           <a href="mailto:webdevelopersbe@gmail.com" class="e-mail-icon">
               <img src="assets/e-mail-icon.png" alt="Second Icon">
           </a>
-          <p><a class="contact-text" href="mailto:webhostersbe@gmail.com">webdevelopersbe@gmail.com</a></p>
+          <p><a class="contact-text" href="mailto:webhostersbe@gmail.com">Mail Ons</a></p>
           <img class="copyright-symbol" src="assets/copyright-symbol.png">
           <p class="copyright-text"> 2024 WebDevelopersBe. All rights reserved.</p>
       </div>
