--- a/index.html
+++ b/index.html
@@ -4,47 +4,240 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebDevelopmentBe</title>
-        <link
-      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="styles/home.css" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet"/>
   </head>
   <body>
-
     <nav>
       <div class="nav-container"><img src="" alt="Logo" class="logo-nav"></div>
     </nav>
     <div class="main-content">
-      <div class="intro-container">
+      <div class=" intro-container">
         <h1 class="title-intro" ><span>Web</span>Developers<span>Be</span></h1>
         <button class="contact-btn">Contacteer Ons!</button>
       </div>
     </div>
-  <div class="waarom-ons-container">
-    <h3 class="waarom-ons">Waarom Ons<span>?</span></h3>
   </div>
-  <div id="#about">
-    <div class="about-container">
-      <div class="about-grid">
-        <div class="grid-box">
-          <i class='bx bxs-bank'></i>
-          <h4>Lage prijzen vind je niet vaak,
-            maar bij ons verkrijgt u uw site vanaf €49.22/ maand!
-          </h4>
-          <button class="about-grid-btn">Bekijk Prijzen</button>
+  <div class=" about-container">
+    <h2 class="about-title">Waarom voor ons kiezen?</h2>
+    <ul class="about-boxes">
+      <li class="about-box">
+        <div>
+          <h3 class="about-box-title">Prijzen</h3>
+          <div class="i-wrapper-about">
+          <i class='bx bx-money'></i></div>
+          <div class="about-box-content">
+            <p>Bij ons kunt u een website voor maar €59.00/maand verkrijgen! + Betalingen kunnen ook eenmalig zijn!</p>
+          </div>
         </div>
-        <div class="grid-box">
-          <i class='bx bx-message-square-dots'></i>
-          <h4>Wij staan altijd klaar en antwoorden op al jullie vragen in de kortste tijd mogelijk *24/7*</h4>
-          <button class="about-grid-btn">Contacteer Ons</button>
+        <div class="about-box-link-wrapper">
+          <a href="#prijzen" class="about-box-link">Bekijk Prijzen</a>
         </div>
-        <div class="grid-box">
-          <i class='bx bxs-hard-hat'></i>
-          <h4>We bouwen uw website volledig volgens uw verwachtingen op voorhand. Niet tevreden? Niet betalen!</h4>
-          <button class="about-grid-btn">Recensies</button>
+      </li>
+      <li class="about-box">
+        <div>
+          <h3 class="about-box-title">Werking</h3>
+          <div class="i-wrapper-about">
+            <i class='bx bx-cog'></i>
+          </div>
+          <div class="about-box-content">
+            <p>Wij leveren een website op voorhand. NIet tevreden? Niet betalen!</p>
+          </div>
         </div>
+        <div class="about-box-link-wrapper">
+          <a href="#contact" class="about-box-link">Klinkt als een plan!</a>
+        </div>
+      </li>
+      <li class="about-box">
+        <div>
+          <h3 class="about-box-title">Support</h3>
+          <div class="i-wrapper-about">
+            <i class='bx bx-message-rounded-dots'></i>
+          </div>
+          <div class="about-box-content">
+            <p>Wij staan er voor u klaar elke moment van de dag om al uw vragen en verzoeken te beantwoorden!</p>
+          </div>
+        </div>
+        <div class="about-box-link-wrapper">
+          <a href="#contact" class="about-box-link">Stuur Ons een berichtje!</a>
+        </div>
+      </li>
+      <li class="about-box">
+        <div>
+          <h3 class="about-box-title">Administratie</h3>
+          <div class="i-wrapper-about">
+            <i class='bx bxs-bar-chart-square'></i>
+          </div>
+          <div class="about-box-content">
+            <p>Een code administreren en updaten is ingewikkeld als je niet weet wat je doet, daarom met onze maandelijkse plan zal ons team uw site administreren en updaten wanneer nodig!</p>
+          </div>
+        </div>
+        <div class="about-box-link-wrapper">
+          <a href="" class="about-box-link">Learn More</a>
+        </div>
+      </li>
+      <li class="about-box">
+        <div>
+          <h3 class="about-box-title">Flexibiliteit</h3>
+          <div class="i-wrapper-about">
+            <i class='bx bxl-tailwind-css'></i>
+          </div>
+          <div class="about-box-content">
+            <p>Alles is flexiebel bij ons. We kunnen met alles overeenkomen!</p>
+          </div>
+        </div>
+        <div class="about-box-link-wrapper">
+          <a href="#contact" class="about-box-link">Laten we negocieren!</a>
+        </div>
+      </li>
+      <li class="about-box">
+        <div>
+          <h3 class="about-box-title">Veel stijlen</h3>
+          <div class="i-wrapper-about">
+            <i class='bx bxl-java'></i>
+          </div>
+          <div class="about-box-content">
+            <p>Zoals u ziet baseren wij ons op eenvoudige websites. Maar complexere websites zijn voor ons geen uitdagign! *Complexere websites vragen natuurlijk meer tijd en geld*</p>
+          </div>
+        </div>
+        <div class="about-box-link-wrapper">
+          <a href="#contact" class="about-box-link">Daag ons uit!</a>
+        </div>
+      </li>
+      <li class="about-box">
+        <div>
+          <h3 class="about-box-title">Service</h3>
+          <div class="i-wrapper-about">
+            <i class='bx bx-dna'></i>
+          </div>
+          <div class="about-box-content">
+            <p>Onze klanten zijn de belangrijkste personen die we met respect van dienst zijn. Al ons werk is gedaan met passie en goede wil.</p>
+          </div>
+        </div>
+        <div class="about-box-link-wrapper">
+          <a href="#work" class="about-box-link">Ons Werk bekijken</a>
+        </div>
+      </li>
+      <li class="about-box">
+        <div>
+          <h3 class="about-box-title">Attitude</h3>
+          <div class="i-wrapper-about">
+            <i class='bx bx-user'></i>
+          </div>
+          <div class="about-box-content">
+            <p>Wij pakken ons werk serieus aan, alles wordt met dedicatie en veel werk op een serieuse manier overgebracht aan onze klanten.</p>
+          </div>
+        </div>
+        <div class="about-box-link-wrapper">
+          <a href="#work" class="about-box-link">Ons Werk bekijken</a>
+        </div>
+      </li>
+    </ul>
+  </div>
+<div class=" work-container">
+  <div class="work-container-h4">
+    <h4 class="work-h4">Wat we al gemaakt hebben!</h4>
+    <i class='bx bx-info-circle'></i>
+    <div class="info-work-p">
+  <p>Hieronder zie je alles wat we tot nu toe gebouwd hebben + de link naar de site zelf!</p></div></div>
+  <div class="work-grid">
+<div class="grid-work-box">
+  <i class='bx bxs-network-chart'></i>
+  <p>Voorlopig nog in opmaak</p>
+</div>
+<div class="grid-work-box">
+  <i class='bx bxs-network-chart'></i>
+  <p>Voorlopig nog in opmaak</p>
+</div>
+<div class="grid-work-box">
+  <i class='bx bxs-network-chart'></i>
+  <p>Voorlopig nog in opmaak</p>
+</div>
+<div class="grid-work-box">
+  <i class='bx bxs-network-chart'></i>
+  <p>Voorlopig nog in opmaak</p>
+</div>
+<div class="grid-work-box">
+  <i class='bx bxs-network-chart'></i>
+  <p>Voorlopig nog in opmaak</p>
+</div>
+<div class="grid-work-box">
+  <i class='bx bxs-network-chart'></i>
+  <p>Voorlopig nog in opmaak</p>
+</div>
+<div class="grid-work-box">
+  <i class='bx bxs-network-chart'></i>
+  <p>Voorlopig nog in opmaak</p>
+</div>
+<div class="grid-work-box">
+  <i class='bx bxs-network-chart'></i>
+  <p>Voorlopig nog in opmaak</p>
+</div>
+<div class="grid-work-box">
+  <i class='bx bxs-network-chart'></i>
+  <p>Voorlopig nog in opmaak</p>
+</div>
+  </div>
+</div>
+<div id="prijzen">
+<div class=" prijzen-container">
+  <div class="prijzen-intro">
+    <h4>Prijzen</h4>
+  </div>
+  <div class="prijzen">
+    <div class="prijzen-box">
+      <img class="prijs1-img" src="/assets/photo-price1.jpg">
+      <h3 class="title-prijzen-box">Klein Pakket</h3>
+      <p>Online Visitekaartje</p>
+      <p class="beginprijs" >*beginprijs*</p>
+      <h5 class="prijs1">€347.00</h5>
+      <div class="prijzen-info">
+        <div><i class='bx bx-chevron-down'></i>Updates mogelijk<i class='bx bx-chevron-down'></i></div>
+        <div><i class='bx bx-chevron-down'></i>Één pagina<i class='bx bx-chevron-down'></i></div>
+        <div><i class='bx bx-chevron-down'></i>Uniek design<i class='bx bx-chevron-down'></i></div>
+        <div><i class='bx bx-x'></i>Domeinnaam<i class='bx bx-x'></i></div>
+        <button class="contact-prijs-btn">Contacteer Ons</button>
       </div>
     </div>
+    <div class="prijzen-box">
+      <img class="prijs1-img" src="/assets/photo-price2.webp">
+      <h3 class="title-prijzen-box">Groter Pakket</h3>
+      <p>Statische website</p>
+      <p class="beginprijs" >*beginprijs*</p>
+      <h5 class="prijs1">€59.00/maand</h5>
+      <div class="prijzen-info">
+        <div><i class='bx bx-chevron-down'></i>Dagelijkse Updates<i class='bx bx-chevron-down'></i></div>
+        <div><i class='bx bx-chevron-down'></i>Handenvol pagina's<i class='bx bx-chevron-down'></i></div>
+        <div><i class='bx bx-chevron-down'></i>Uniek design<i class='bx bx-chevron-down'></i></div>
+        <div><i class='bx bx-chevron-down'></i>*Gratis* Domeinnaam<i class='bx bx-chevron-down'></i></div>
+        <button class="contact-prijs-btn">Contacteer Ons</button>
+      </div>
+    </div>
+    <div class="prijzen-box">
+      prijs 1
+    </div>
   </div>
+</div>
+</div>
+<div id="contact"></div>
+<div class="contact-container">
+  <h4 class="contact-form">
+    Stuur ons een bericht!</h4>
+  <form action="https://formspree.io/f/xrgnwdvp"/>
+  <div class="contact-grid">
+    <div>
+  <input type="text" name="Name" placeholder="Volledige Naam" required></div>
+  <div>
+  <input type="email" name="Email" placeholder="E-mail" required></div>
+  <div>
+<textarea name="Message" placeholder="Bericht" required></textarea></div>
+<div>
+<button class="contact-submit-btn" type="submit">Verzend</button></div>
+</div>
+</form>
+</div>
+</div>
     <div class="sidebar">
       <div class="top">
         <div class="logo">
@@ -55,7 +248,7 @@
       </div>
     <ul>
       <li>
-        <a href="">
+        <a href="#home">
           <i class="bx bx-home"></i>
           <span class="nav-item">Home</span>
         </a>
@@ -69,28 +262,21 @@
         <span class="tooltip">About</span>
       </li>
       <li>
-        <a href="">
+        <a href="#work">
           <i class="bx bx-briefcase"></i>
           <span class="nav-item">Work</span>
         </a>
         <span class="tooltip">Work</span>
       </li>
       <li>
-        <a href="">
-          <i class="bx bx-star"></i>
-          <span class="nav-item">Recensies</span>
-        </a>
-        <span class="tooltip">Recensies</span>
-      </li>
-      <li>
-        <a href="">
+        <a href="#prijzen">
           <i class='bx bx-purchase-tag'></i>
           <span class="nav-item">Prijzen</span>
         </a>
         <span class="tooltip">Prijzen</span>
       </li>
       <li>
-        <a href="">
+        <a href="#contact">
           <i class="bx bxs-contact"></i>
           <span class="nav-item">Contact</span>
         </a>
@@ -107,4 +293,7 @@
       sidebar.classList.toggle("active");
     };
   </script>
+  <script src="fadein.js"></script>
 </html>
+
+
