--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 <div class="contact-container">
   <h4 class="contact-form">
     Stuur ons een bericht!</h4>
-  <form action="https://formspree.io/f/xrgnwdvp"/>
+  <form action="https://formspree.io/f/xrgnwdvp"/ method="post">
   <div class="contact-grid">
     <div>
   <input type="text" name="Name" placeholder="Volledige Naam" required></div>
