--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
   </div>
   <div class="prijzen">
     <div class="prijzen-box">
-      <img class="prijs1-img" src="/assets/photo-price1.jpg">
+      <img class="prijs1-img" src="assets/photo-price1.jpg">
       <h3 class="title-prijzen-box">Klein Pakket</h3>
       <p>Online Visitekaartje</p>
       <p class="beginprijs" >*beginprijs*</p>
