--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       </div>
     </div>
     <div class="prijzen-box">
-      <img class="prijs1-img" src="/assets/photo-price2.webp">
+      <img class="prijs1-img" src="assets/photo-price2.webp">
       <h3 class="title-prijzen-box">Groter Pakket</h3>
       <p>Statische website</p>
       <p class="beginprijs" >*beginprijs*</p>
