--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           </div>
         </div>
         <div class="about-box-link-wrapper">
-          <a href="#contact" class="about-box-link">Help mijn</a>
+          <a href="#contact" class="about-box-link">Help mij</a>
         </div>
       </li>
       <li class="about-box">
