--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <i class='bx bxl-java'></i>
           </div>
           <div class="about-box-content">
-            <p>Zoals u ziet baseren wij ons op eenvoudige websites. Maar complexere websites zijn voor ons geen uitdagign! *Complexere websites vragen natuurlijk meer tijd en geld*</p>
+            <p>Zoals u ziet baseren wij ons op eenvoudige websites. Maar complexere websites zijn voor ons geen uitdaging! *Complexere websites vragen natuurlijk meer tijd en geld*</p>
           </div>
         </div>
         <div class="about-box-link-wrapper">
